--- a/packages/moleculer-jaeger/package.json
+++ b/packages/moleculer-jaeger/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "jaeger-client": "3.10.0",
-    "opentracing": "0.14.1"
+    "lodash": "4.17.5",
+    "node-int64": "0.4.0"
   }
 }
