--- a/packages/moleculer-jaeger/package.json
+++ b/packages/moleculer-jaeger/package.json
@@ -35,6 +35,7 @@
     "lolex": "2.3.2",
     "moleculer": "0.12.1",
     "moleculer-docgen": "0.2.1",
+    "moleculer-web": "0.7.0-beta2",
     "nodemon": "1.17.1",
     "npm-check": "5.5.2"
   },
