add prometheus implementation

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,8 +11,8 @@
 			"program": "${workspaceRoot}\\dev",
 			"cwd": "${workspaceRoot}",
 			"args": [
-				"moleculer-jaeger",
-				"api"
+				"moleculer-prometheus",
+				"simple"
 			]
 		},
 		{
