--- a/packages/moleculer-prometheus/package.json
+++ b/packages/moleculer-prometheus/package.json
@@ -24,19 +24,19 @@
   "author": "MoleculerJS",
   "license": "MIT",
   "peerDependencies": {
-    "moleculer": "^0.12.0"
+    "moleculer": ">=0.12.0 || >=0.13.0"
   },
   "devDependencies": {
     "benchmarkify": "2.1.0",
-    "coveralls": "3.0.0",
-    "eslint": "4.19.1",
-    "jest": "22.4.3",
-    "jest-cli": "22.4.3",
-    "lolex": "2.3.2",
-    "moleculer": "0.12.1",
+    "coveralls": "3.0.2",
+    "eslint": "5.1.0",
+    "jest": "23.3.0",
+    "jest-cli": "23.3.0",
+    "lolex": "2.7.1",
+    "moleculer": "0.13.0",
     "moleculer-docgen": "0.2.1",
-    "nodemon": "1.17.2",
-    "npm-check": "5.6.0"
+    "nodemon": "1.17.5",
+    "npm-check": "5.7.1"
   },
   "jest": {
     "testEnvironment": "node",
@@ -49,7 +49,7 @@
     "node": ">= 6.x.x"
   },
   "dependencies": {
-    "polka": "0.3.4",
-    "prom-client": "11.0.0"
+    "polka": "0.4.0",
+    "prom-client": "11.1.1"
   }
 }
