--- a/packages/moleculer-zipkin/package.json
+++ b/packages/moleculer-zipkin/package.json
@@ -24,20 +24,20 @@
   "author": "MoleculerJS",
   "license": "MIT",
   "peerDependencies": {
-    "moleculer": "^0.12.0"
+    "moleculer": ">=0.12.0 || >=0.13.0"
   },
   "devDependencies": {
     "benchmarkify": "2.1.0",
-    "coveralls": "3.0.0",
-    "eslint": "4.19.1",
-    "jest": "22.4.3",
-    "jest-cli": "22.4.3",
-    "lolex": "2.3.2",
-    "moleculer": "0.12.1",
+    "coveralls": "3.0.2",
+    "eslint": "5.1.0",
+    "jest": "23.3.0",
+    "jest-cli": "23.3.0",
+    "lolex": "2.7.1",
+    "moleculer": "0.13.0",
     "moleculer-docgen": "0.2.1",
-    "moleculer-web": "0.7.0-beta3",
-    "nodemon": "1.17.2",
-    "npm-check": "5.6.0"
+    "moleculer-web": "0.8.0",
+    "nodemon": "1.17.5",
+    "npm-check": "5.7.1"
   },
   "jest": {
     "testEnvironment": "node",
@@ -51,6 +51,6 @@
   },
   "dependencies": {
     "axios": "0.18.0",
-    "lodash": "4.17.5"
+    "lodash": "4.17.10"
   }
 }
