--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
   "license": "MIT",
   "homepage": "https://github.com/moleculerjs/moleculer-metrics#readme",
   "devDependencies": {
-    "coveralls": "3.0.0",
-    "eslint": "4.8.0",
+    "coveralls": "3.0.5",
+    "eslint": "5.1.0",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-security": "1.4.0",
     "glob": "7.1.2",
-    "jest": "20.0.4",
-    "jest-cli": "20.0.4",
+    "jest": "24.8.0",
+    "jest-cli": "24.8.0",
     "lerna": "2.3.1",
-    "lodash": "4.17.4",
-    "markdown-magic": "0.1.19",
-    "nodemon": "1.12.1"
+    "lodash": "4.17.15",
+    "markdown-magic": "0.1.25",
+    "nodemon": "1.19.1"
   },
   "dependencies": {
     "moleculer-cli": "0.6.4"
