--- a/packages/moleculer-console-tracer/package.json
+++ b/packages/moleculer-console-tracer/package.json
@@ -28,7 +28,7 @@
     "moleculer": ">=0.12.0 || >=0.13.0"
   },
   "devDependencies": {
-    "benchmarkify": "^2.1.2",
+    "benchmarkify": "2.1.2",
     "coveralls": "3.0.2",
     "eslint": "5.1.0",
     "eslint-plugin-node": "9.1.0",
