--- a/packages/moleculer-zipkin/package.json
+++ b/packages/moleculer-zipkin/package.json
@@ -27,14 +27,17 @@
     "moleculer": ">=0.12.0 || >=0.13.0"
   },
   "devDependencies": {
-    "benchmarkify": "2.1.0",
+    "benchmarkify": "2.1.2",
     "coveralls": "3.0.2",
-    "eslint": "5.1.0",
-    "jest": "23.3.0",
-    "jest-cli": "23.3.0",
+    "eslint": "5.16.0",
+    "eslint-plugin-node": "9.1.0",
+    "eslint-plugin-promise": "4.2.1",
+    "eslint-plugin-security": "1.4.0",
+    "jest": "24.8.0",
+    "jest-cli": "24.8.0",
     "lolex": "2.7.1",
-    "moleculer": "0.13.0",
-    "moleculer-docgen": "0.2.1",
+    "moleculer": "0.13.9",
+    "moleculer-docgen": "0.2.2",
     "moleculer-web": "0.8.0",
     "nodemon": "1.17.5",
     "npm-check": "5.7.1"
@@ -50,7 +53,7 @@
     "node": ">= 6.x.x"
   },
   "dependencies": {
-    "axios": "0.18.0",
-    "lodash": "4.17.11"
+    "axios": "0.19.0",
+    "lodash": "4.17.15"
   }
 }
