--- a/packages/moleculer-zipkin/package.json
+++ b/packages/moleculer-zipkin/package.json
@@ -35,12 +35,12 @@
     "eslint-plugin-security": "1.4.0",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
-    "lolex": "2.7.1",
+    "lolex": "^4.2.0",
     "moleculer": "0.13.9",
     "moleculer-docgen": "0.2.2",
-    "moleculer-web": "0.8.0",
-    "nodemon": "1.17.5",
-    "npm-check": "5.7.1"
+    "moleculer-web": "0.8.5",
+    "nodemon": "1.19.1",
+    "npm-check": "5.9.0"
   },
   "jest": {
     "testEnvironment": "node",
@@ -53,7 +53,6 @@
     "node": ">= 6.x.x"
   },
   "dependencies": {
-    "axios": "0.19.0",
-    "lodash": "4.17.15"
+    "axios": "0.19.0"
   }
 }
