--- a/packages/moleculer-jaeger/package.json
+++ b/packages/moleculer-jaeger/package.json
@@ -30,15 +30,13 @@
     "moleculer": ">=0.12.0 || >=0.13.0"
   },
   "devDependencies": {
-    "benchmarkify": "2.1.2",
     "coveralls": "3.0.5",
-    "eslint": "5.1.0",
+    "eslint": "5.16.0",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-security": "1.4.0",
     "jest": "24.8.0",
     "jest-cli": "24.8.0",
-    "lolex": "2.7.1",
     "moleculer": "0.13.9",
     "moleculer-docgen": "0.2.2",
     "moleculer-web": "0.9.0-beta6",
@@ -46,7 +44,6 @@
     "pre-commit": "^1.2.2",
     "npm-check": "5.9.0"
   },
-
   "jest": {
     "testEnvironment": "node",
     "coveragePathIgnorePatterns": [
@@ -59,7 +56,7 @@
   },
   "dependencies": {
     "jaeger-client": "3.15.0",
-    "lodash": "4.17.15",
+    "lodash.isfunction": "3.0.9",
     "node-int64": "0.4.0"
   }
 }
