--- a/.gitignore
+++ b/.gitignore
@@ -57,18 +57,4 @@ typings/
 
 # dotenv environment variables file
 .env
-**/.idea/**/workspace.xml
-**/.idea/**/tasks.xml
-**/.idea/dictionaries
-**/.idea/codeStyles/
-**/.idea/**/*
-
-# Sensitive or high-churn files:
-**/.idea/**/dataSources/
-**/.idea/**/dataSources.ids
-**/.idea/**/dataSources.xml
-**/.idea/**/dataSources.local.xml
-**/.idea/**/sqlDataSources.xml
-**/.idea/**/dynamic.xml
-**/.idea/**/uiDesigner.xml
-
+**/.idea
