--- a/packages/moleculer-jaeger/package.json
+++ b/packages/moleculer-jaeger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moleculer-jaeger",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Moleculer metrics module for Jaeger.",
   "main": "index.js",
   "scripts": {
@@ -41,8 +41,8 @@
     "moleculer-docgen": "0.2.2",
     "moleculer-web": "0.9.0-beta6",
     "nodemon": "1.19.1",
-    "pre-commit": "^1.2.2",
-    "npm-check": "5.9.0"
+    "npm-check": "5.9.0",
+    "pre-commit": "^1.2.2"
   },
   "jest": {
     "testEnvironment": "node",
