--- a/packages/moleculer-jaeger/package.json
+++ b/packages/moleculer-jaeger/package.json
@@ -30,7 +30,7 @@
     "moleculer": ">=0.12.0 || >=0.13.0"
   },
   "devDependencies": {
-    "coveralls": "3.0.5",
+    "coveralls": "^3.0.11",
     "eslint": "5.16.0",
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-promise": "4.2.1",
@@ -39,9 +39,9 @@
     "jest-cli": "24.8.0",
     "moleculer": "0.13.9",
     "moleculer-docgen": "0.2.2",
-    "moleculer-web": "0.9.0-beta6",
+    "moleculer-web": "^0.9.1",
     "nodemon": "1.19.1",
-    "npm-check": "5.9.0",
+    "npm-check": "^5.9.2",
     "pre-commit": "^1.2.2"
   },
   "jest": {
@@ -55,7 +55,7 @@
     "node": ">= 6.x.x"
   },
   "dependencies": {
-    "jaeger-client": "3.15.0",
+    "jaeger-client": "^3.17.2",
     "lodash.isfunction": "3.0.9",
     "node-int64": "0.4.0"
   }
