--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "nodemon": "1.19.2"
   },
   "dependencies": {
-    "moleculer-cli": "0.6.6"
+    "moleculer-cli": "^0.7.0"
   },
   "jest": {
     "testEnvironment": "node",
